ofbiz merge: 8f072766ab... from trunk (various entity code bugs)
7 commit (various entity code errors & cleanups):
"Improved: Fixing defects reported by FindBugs, package
org.apache.ofbiz.entity.
(OFBIZ-9716)"

Ofbiz-Commit: 8f072766ab3c74d46e412470e9fe5a344ac12593,
d2f08bc1256500780bffbbc83cabd510ecc73ac6,
cf27b716b8bcd8de884816984b9b185f6acff6bb,
b98848009d60ebc9e9ac07c1d42c7fe5d4e99904,
2c427ec7ccaa0f33eddfbc5d016f0b566028dcdb,
25199a770dbdb3d49c9d372c62a499908110e83e,
268c5e17ab2b6f2c1b7b4e3bbeb48ace366398d2
Ofbiz-Repo: https://github.com/apache/ofbiz-framework.git
Ofbiz-Branch: trunk

Refs https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/issues/626